--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 	height:60px;
 	bottom:40px;
 	right:40px;
-	background-color:#25d366;
+	background-color:#00bb2d;
 	color:#FFF;
 	border-radius:50px;
 	text-align:center;
@@ -14,7 +14,7 @@
 }
 .float:hover {
 	text-decoration: none;
-	color: #25d366;
+	color: #00bb2d;
   background-color:#fff;
 }
 
